--- a/arch/arm/configs/mini210_linux_defconfig
+++ b/arch/arm/configs/mini210_linux_defconfig
@@ -1222,10 +1222,29 @@ CONFIG_WLAN=y
 # CONFIG_USB_KAWETH is not set
 # CONFIG_USB_PEGASUS is not set
 # CONFIG_USB_RTL8150 is not set
-# CONFIG_USB_USBNET is not set
+CONFIG_USB_USBNET=y
+# CONFIG_USB_NET_AX8817X is not set
+# CONFIG_USB_NET_CDCETHER is not set
+# CONFIG_USB_NET_CDC_EEM is not set
+# CONFIG_USB_NET_CDC_NCM is not set
+# CONFIG_USB_NET_DM9601 is not set
+CONFIG_USB_NET_DM9620=y
+# CONFIG_USB_NET_SMSC75XX is not set
+# CONFIG_USB_NET_SMSC95XX is not set
+# CONFIG_USB_NET_GL620A is not set
+# CONFIG_USB_NET_NET1080 is not set
+# CONFIG_USB_NET_PLUSB is not set
+# CONFIG_USB_NET_MCS7830 is not set
+# CONFIG_USB_NET_RNDIS_HOST is not set
+# CONFIG_USB_NET_CDC_SUBSET is not set
+# CONFIG_USB_NET_ZAURUS is not set
+# CONFIG_USB_NET_CX82310_ETH is not set
+# CONFIG_USB_NET_KALMIA is not set
 # CONFIG_USB_HSO is not set
+# CONFIG_USB_NET_INT51X1 is not set
 # CONFIG_USB_CDC_PHONET is not set
 # CONFIG_USB_IPHETH is not set
+# CONFIG_USB_SIERRA_NET is not set
 # CONFIG_WAN is not set
 
 #
@@ -1312,7 +1331,12 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_S3C2410 is not set
 CONFIG_TOUCHSCREEN_1WIRE=y
 CONFIG_TOUCHSCREEN_IF=y
+# CONFIG_AUTO_REPORT_1WIRE_INPUT is not set
 CONFIG_TOUCHSCREEN_GOODIX=y
+CONFIG_TOUCHSCREEN_GT9XX=y
+CONFIG_TOUCHSCREEN_GOODIX_MT_SYNC=y
+# CONFIG_TOUCHSCREEN_GOODIX_MT_SLOT is not set
+# CONFIG_TOUCHSCREEN_GOODIX_SINGLE is not set
 CONFIG_TOUCHSCREEN_FT5X0X=y
 # CONFIG_TOUCHSCREEN_GUNZE is not set
 # CONFIG_TOUCHSCREEN_ELO is not set
@@ -2593,10 +2617,12 @@ CONFIG_YAFFS_YAFFS1=y
 CONFIG_YAFFS_YAFFS2=y
 CONFIG_YAFFS_AUTO_YAFFS2=y
 # CONFIG_YAFFS_DISABLE_TAGS_ECC is not set
-# CONFIG_YAFFS_ALWAYS_CHECK_CHUNK_ERASED is not set
+CONFIG_YAFFS_ALWAYS_CHECK_CHUNK_ERASED=y
 # CONFIG_YAFFS_EMPTY_LOST_AND_FOUND is not set
 # CONFIG_YAFFS_DISABLE_BLOCK_REFRESHING is not set
 # CONFIG_YAFFS_DISABLE_BACKGROUND is not set
+CONFIG_YAFFS_DISABLE_SHORT_CACHE=y
+CONFIG_YAFFS_CHECKPT_ON_REMOUNT=y
 CONFIG_YAFFS_XATTR=y
 # CONFIG_JFFS2_FS is not set
 # CONFIG_LOGFS is not set
